tests/snapshots/examples_fixtures/effects__failing__04_reserved_primops_module_import.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/failing/04_reserved_primops_module_import.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
